Fixed several design and spacing issues.

--- a/styles/Landing.css
+++ b/styles/Landing.css
@@ -18,11 +18,11 @@
 }
 
 .book-ride-btn:hover{
-    @apply bg-white text-blue-600 border-2 border-blue-600  transition-colors duration-300
+    @apply bg-white text-blue-500 border-2 border-blue-500  transition-colors duration-300
 }
 
 .book-ride-btn:hover .checkmark{
-    @apply fill-blue-600 border-blue-600 
+    @apply fill-blue-500 border-blue-500 
 }
 
 .checkmark{
@@ -67,11 +67,11 @@
 
 .form-btn{
     @apply mt-8 h-11 text-center py-[0.7rem] text-white font-bold w-[100%]
-    rounded-sm shadow-sm shadow-black bg-blue-600;
+    rounded-sm shadow-md shadow-blue-200  bg-blue-500;
 }
 
 .asterisk{
-    @apply text-blue-600 text-2xl p-0 h-0 m-0
+    @apply text-blue-500 text-2xl p-0 h-0 m-0
 
 }
 
@@ -95,7 +95,7 @@
 
   .vehicle-btns:hover,
   .vehicle-btns:focus{
-    @apply bg-blue-600 text-white transition-colors duration-500
+    @apply bg-blue-500 text-white transition-colors duration-500
   }
 
   /* Testimonials */
